<resources>
    <string name="app_name">Guess</string>
    <string name="please_enter_a_number_1_10">Please enter a number(1~10)</string>
    <string name="ok">ok</string>
    <string name="got_it">Yes, you got it</string>
    <string name="bigger">Bigger</string>
    <string name="smaller">smaller</string>
    <string name="message">Message</string>
    <string name="title_activity_material">MaterialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>